@@ -22,8 +22,6 @@ int main(int argc, char *argv[])
   ClutterColor stage_color = { 0x00, 0x00, 0x00, 0xff };
   ClutterColor actor_color = { 0xff, 0xff, 0xcc, 0xff };
 
-  ClutterUnit min_height, natural_height;
-
   clutter_init (&argc, &argv);
 
   /* Get the stage and set its size and color: */
@@ -42,9 +40,14 @@ int main(int argc, char *argv[])
   clutter_text_set_font_name (CLUTTER_TEXT (text), "Sans 12");
   clutter_text_set_editable (CLUTTER_TEXT (text), FALSE);
   clutter_text_set_line_wrap (CLUTTER_TEXT (text), FALSE);
+  
+  /* Discover the preferred height and use that height: */
+  ClutterUnit min_height = 0;
+  ClutterUnit natural_height = 0;
   clutter_actor_get_preferred_height (text, 750, &min_height,
-                                      &natural_height);
+    &natural_height);
   clutter_actor_set_size (text, 750, natural_height);
+  
   clutter_actor_set_position (text, 5, 5);
   clutter_container_add_actor (CLUTTER_CONTAINER (stage), text);
   clutter_actor_show (text);
@@ -67,9 +70,13 @@ int main(int argc, char *argv[])
   clutter_text_set_editable (CLUTTER_TEXT (text), TRUE);
   clutter_text_set_line_wrap (CLUTTER_TEXT (text), TRUE);
 
+  /* Discover the preferred height and use that height: */
+  min_height = 0;
+  natural_height = 0;
   clutter_actor_get_preferred_height (text, 750, &min_height,
-                                      &natural_height);
+    &natural_height);
   clutter_actor_set_size (text, 750, natural_height);
+  
   clutter_actor_set_position (text, 5, 50);
   clutter_container_add_actor (CLUTTER_CONTAINER (stage), text);
   clutter_actor_show (text);
